Changes for 2.2.10rc1

New features:
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese and Polish translations; thanks to Zabbix translators (Richlv)
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)

Bug fixes:
.......PS. [ZBX-8299] fixed SQL errors in case a network discovery rule or check is deleted during processing (asaveljevs)
...G...... [ZBX-9467] fixed agent compilation error related to "ifnet" and "ifnet_head" structs on OpenBSD 5.5 and above (asaveljevs)
.......PS. [ZBX-9457] fixed server crash in case ValueCacheSize=0; thanks to MATSUDA Daiki for patch (asaveljevs)
.......PS. [ZBX-5717] fixed incorrect calculation of icmppingloss[] due to floating-point errors (asaveljevs)
........S. [ZBX-9436] fixed zabbix_server to not exit in case of database connection loss in the middle of transaction (dimir)
........S. [ZBX-9355] added host name and names of conflicting templates to the error message when templates fail to link due to a duplicate item, fixed linking of templates containing web scenarious (igors)
........S. [ZBX-9352] fixed execution of remote commands on the server in case trigger expression contains multiple hosts (asaveljevs)
........S. [ZBX-3507] fixed SMS sending with Huawei GSM modems (asaveljevs)
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)
.......PS. [ZBX-7446] fixed vmware.hv.status item always returning 0 (gray) status (wiper)
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)
A.F....... [ZBX-9365] fixed array_combine() function giving a warning message for PHP versions < 5.4.0 (Ivo)
..F....... [ZBX-9402] fixed trigger list sorting (Ivo)
..F....... [ZBX-9367] fixed "Status of Zabbix" and "System status" widget default refresh intervals (Ivo)